--- a/site/config.toml
+++ b/site/config.toml
@@ -1,8 +1,8 @@
 baseurl = "/"
 languageCode = "en-us"
-title = "Strata"
+title = "Company Name"
 theme = "hugo-strata-theme"
-disqusShortname = "spf13"
+disqusShortname = "zcomprog"
 # Enable Google Analytics by inserting your tracking code
 googleAnalytics = ""
 # Define how many posts should appear on a site
@@ -11,8 +11,8 @@ paginate = 10
 [params]
 	# To provide some metadata for search engines feel free to add a few
     # information about you and your website.
-	name = "Your name"
-	description = "Describe your website"
+	name = "Darek"
+	description = "I make furniture. I've been doing so for quite some time; people tell me I'm good at it."
 
 	# Format dates with Go's time formatting
 	date_format = "2006-01-02"
@@ -26,7 +26,7 @@ paginate = 10
 		# Replace the avatar with a picture of your own under static/images
 		avatar = "avatar.jpg"
 		# Use Markdown to format the string. This works nearly all over the theme
-		bio = "**I'm Strata**, a super simple<br> responsive site template freebie<br> crafted by [HTML5 UP](//html5up.net)."
+		bio = "**I'm Darek**, I love woodworking and bringing my client's vision to life in the form of beautiful, functional furniture."
 		# The icons will be shown if you enter your username
 		twitter = "spf13"
 		github = "spf13"
@@ -37,7 +37,7 @@ paginate = 10
 		linkedin = ""
 
 		copyright = [
-			"&copy; John Doe",
+			"&copy; Company Name",
 			"Design: [HTML5 UP](//html5up.net)",
 			"Demo Images: [Unsplash](//unsplash.com/)"
 		]
@@ -45,7 +45,7 @@ paginate = 10
 
 	[params.about]
 		hide  = false
-		title = "Ipsum lorem dolor aliquam ante commodo magna sed accumsan arcu neque."
+		title = "This section should contain information about you."
 		content = "Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia."
 
 
@@ -58,8 +58,8 @@ paginate = 10
 		[[params.portfolio.gallery]]
 			image = "fulls/01.jpg"
 			thumb = "thumbs/01.jpg"
-			title = "Lorem ipsum dolor."
-			description = "Lorem ipsum dolor sit amet."
+			title = "This should be a title for the peice."
+			description = "This should describe the peice."
 
 		[[params.portfolio.gallery]]
 			image = "fulls/02.jpg"
@@ -98,11 +98,11 @@ paginate = 10
 	[params.contact]
 		hide  = false
 		title = "Get In Touch"
-		content = "Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor."
+		content = "For general inquiries or to get started on your custom furniture please use the below contact form."
 
 		address = [
-			"1234 Somewhere Rd.",
-			"Nashville, TN 00000",
+			"P.O. Box 00000",
+			"Hampton, VA 00000",
 			"United States"
 		]
 		phone = "000-000-0000"
