--- a/site/config.toml
+++ b/site/config.toml
@@ -1,8 +1,8 @@
 baseurl = "/"
 languageCode = "en-us"
-title = "Company Name"
+title = "Company_Name"
 theme = "hugo-strata-theme"
-disqusShortname = "zcomprog"
+disqusShortname = "Company_Name"
 # Enable Google Analytics by inserting your tracking code
 googleAnalytics = ""
 # Define how many posts should appear on a site
@@ -28,13 +28,13 @@ paginate = 10
 		# Use Markdown to format the string. This works nearly all over the theme
 		bio = "**I'm Darek**, I love woodworking and bringing my client's vision to life in the form of beautiful, functional furniture."
 		# The icons will be shown if you enter your username
-		twitter = "spf13"
-		github = "spf13"
-		dribbble = ""
-		facebook = ""
-		googleplus = ""
-		flickr = ""
-		linkedin = ""
+		twitter = "Company_Name"
+		github = "Company_Name"
+		dribbble = "Company_Name"
+		facebook = "Company_Name"
+		googleplus = "Company_Name"
+		flickr = "Company_Name"
+		linkedin = "Company_Name"
 
 		copyright = [
 			"&copy; Company Name",
@@ -118,7 +118,7 @@ paginate = 10
 	    # - send a dummy email yourself to confirm your account
 	    # - click the confirm link in the email from www.formspree.io
 	    # - you're done. Happy mailing!
-		email = "hello@example.com"
+		email = "Company_Name@example.com"
 
 		[params.contact.form]
 			# Set custom strings for the form if your native
